Made website SEO-friendly

--- a/about.html
+++ b/about.html
@@ -2,6 +2,10 @@
 <html lang="en">
   <head>
     <meta charset="UTF-8" />
+    <meta
+      name="description"
+      content="This page is about Olya Ponomarova, a front-end developer from Kyiv Ukraine who are currently based in Poland and how to contact Olya Ponomarova."
+    />
     <meta http-equiv="X-UA-Compatible" content="IE=edge" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
     <link
@@ -75,18 +79,21 @@
             <img
               src="/images/yoga.png"
               class="img-fluid rounded border shadow p-2"
+              alt="Yoga class"
             />
           </div>
           <div class="col-sm-4">
             <img
               src="/images/weather.png"
               class="img-fluid rounded border shadow p-2"
+              alt="Weather app"
             />
           </div>
           <div class="col-sm-4">
             <img
               src="/images/yogurt.png"
               class="img-fluid rounded border shadow p-2"
+              alt="Yogurt"
             />
           </div>
         </div>
@@ -94,7 +101,11 @@
     </div>
     <div id="contact">
       <h2 class="text-center">📮 Contact me</h2>
-      <a href="mailto:ponomaryova.olya.y@gmail.com" class="email-link">
+      <a
+        href="mailto:ponomaryova.olya.y@gmail.com"
+        class="email-link"
+        title="Email to Olya Ponomarova"
+      >
         ponomaryova.olya.y@gmail.com
       </a>
     </div>
