--- a/index.html
+++ b/index.html
@@ -2,9 +2,13 @@
 <html lang="en">
   <head>
     <meta charset="UTF-8" />
+    <meta
+      name="description"
+      content="This page shows examples of projects by about Olya Ponomarova, a front-end developer from Kyiv Ukraine who are currently based in Poland."
+    />
     <meta http-equiv="X-UA-Compatible" content="IE=edge" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
-    <title>Olya Ponomarova</title>
+    <title>Front-end developer - Olya Ponomarova</title>
     <link
       href="https://cdn.jsdelivr.net/npm/bootstrap@5.2.0-beta1/dist/css/bootstrap.min.css"
       rel="stylesheet"
@@ -59,13 +63,25 @@
       Front-end developer, currently based in Poland
     </h3>
     <div class="navigation-links">
-      <a href="/about.html#contact" class="contact-link">Contact me</a>
-      <a href="/about.html" class="about-link">About me</a>
+      <a
+        href="/about.html#contact"
+        class="contact-link"
+        title="Contact Olya Ponomarova"
+      >
+        Contact me
+      </a>
+      <a href="/about.html" class="about-link" title="About Olya Ponomarova">
+        About me
+      </a>
     </div>
     <div class="container">
       <div class="row mt-5">
         <div class="col-sm-6">
-          <img src="/images/yoga.png" class="img-fluid rounded" />
+          <img
+            src="/images/yoga.png"
+            class="img-fluid rounded"
+            alt="Yoga class"
+          />
         </div>
         <div class="col-sm-6">
           <h2 class="mb-4">Yoga app</h2>
@@ -75,7 +91,9 @@
             eos eveniet alias temporibus deserunt veritatis minima fugiat
             explicabo eum dolore.
           </p>
-          <a class="projects-links" href="#">Launch yoga app</a>
+          <a class="projects-links" href="#" title="Launch yoga app">
+            Launch yoga app
+          </a>
         </div>
       </div>
       <div class="row mt-5">
@@ -87,15 +105,25 @@
             eos eveniet alias temporibus deserunt veritatis minima fugiat
             explicabo eum dolore.
           </p>
-          <a class="projects-links" href="#">Launch weather app</a>
+          <a class="projects-links" href="#" title="Launch weather app">
+            Launch weather app
+          </a>
         </div>
         <div class="col-sm-6">
-          <img src="/images/weather.png" class="img-fluid rounded" />
+          <img
+            src="/images/weather.png"
+            class="img-fluid rounded"
+            alt="Weather app"
+          />
         </div>
       </div>
       <div class="row mt-5">
         <div class="col-sm-6">
-          <img src="/images/yogurt.png" class="img-fluid rounded" />
+          <img
+            src="/images/yogurt.png"
+            class="img-fluid rounded"
+            alt="Yogurt"
+          />
         </div>
         <div class="col-sm-6">
           <h2 class="mb-4">Yogurt app</h2>
@@ -105,7 +133,9 @@
             eos eveniet alias temporibus deserunt veritatis minima fugiat
             explicabo eum dolore.
           </p>
-          <a class="projects-links" href="#">Launch yogurt app</a>
+          <a class="projects-links" href="#" title="Launch yogurt app">
+            Launch yogurt app
+          </a>
         </div>
       </div>
     </div>
