Add a media querry for small screens

--- a/about.html
+++ b/about.html
@@ -50,12 +50,19 @@
                   class="nav-link active"
                   aria-current="page"
                   href="/about.html"
+                  title="About Olya Ponomarova"
                 >
                   About me
                 </a>
               </li>
               <li class="nav-item">
-                <a class="nav-link" href="/about.html#contact">Contact me</a>
+                <a
+                  class="nav-link"
+                  href="/about.html#contact"
+                  title="Contact Olya Ponomarova"
+                >
+                  Contact me
+                </a>
               </li>
             </ul>
           </div>
