--- a/index.html
+++ b/index.html
@@ -46,10 +46,22 @@
                 <a class="nav-link active" aria-current="page" href="/">Home</a>
               </li>
               <li class="nav-item">
-                <a class="nav-link" href="/about.html">About me</a>
+                <a
+                  class="nav-link"
+                  href="/about.html"
+                  title="About Olya Ponomarova"
+                >
+                  About me
+                </a>
               </li>
               <li class="nav-item">
-                <a class="nav-link" href="/about.html#contact">Contact me</a>
+                <a
+                  class="nav-link"
+                  href="/about.html#contact"
+                  title="Contact Olya Ponomarova"
+                >
+                  Contact me
+                </a>
               </li>
             </ul>
           </div>
@@ -79,7 +91,7 @@
         <div class="col-sm-6">
           <img
             src="/images/yoga.png"
-            class="img-fluid rounded"
+            class="img-fluid rounded d-none d-sm-block"
             alt="Yoga class"
           />
         </div>
@@ -112,7 +124,7 @@
         <div class="col-sm-6">
           <img
             src="/images/weather.png"
-            class="img-fluid rounded"
+            class="img-fluid rounded d-none d-sm-block"
             alt="Weather app"
           />
         </div>
@@ -121,7 +133,7 @@
         <div class="col-sm-6">
           <img
             src="/images/yogurt.png"
-            class="img-fluid rounded"
+            class="img-fluid rounded d-none d-sm-block"
             alt="Yogurt"
           />
         </div>
